--- a/slide.tex
+++ b/slide.tex
@@ -242,7 +242,7 @@
             \2 X is $\chi$ as in $\chi^2$ distribution
         \1 Lay - TeX?
         \1 Lah - TeX?
-        \1 LaTeX?
+        \1 Latex?
         \1 Personally I think it doesn't matter
             \2 ``The correct way to pronounce SQL is how your professor pronounces it''
     \end{outline}
@@ -319,6 +319,14 @@ print("easy-to-use syntax highlighting!")
 \end{frame}
 
 \begin{frame}{When to use \LaTeX}
+    \begin{figure}[htp]
+      \centering
+      \includegraphics[width=.6\linewidth]{image2.png}
+      \caption{Graph of why \LaTeX is worth knowing}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{When to use \LaTeX}
     \begin{outline}
         \1 When to use \LaTeX
             \2 Academic publishing
@@ -329,7 +337,8 @@ print("easy-to-use syntax highlighting!")
             \2 Homeworks
                 \3 Use Markdown with LaTeX theme
             \2 Drawing diagrams
-            \2 Whenver you don't feel like
+            \2 Whenver you don't feel like to
+            \2 And whenever you are asked to
     \end{outline}
 \end{frame}
 
